fix: overflow for content

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ h1 {
 
 .tabs {
   font-size: 0.7rem;
+  flex-shrink: 0;
   margin: 20px 0;
   color: rgb(225, 225, 225);
   position: relative;
@@ -92,6 +93,11 @@ h1 {
 
 .content {
   font-size: 0.75rem;
+}
+
+.h-full {
+  height: 100%;
+  min-height: 0;
 }
 
 .tab.active {
@@ -121,9 +127,16 @@ h1 {
 }
 
 .container {
-  height: 80vh;
+  height: 50vh;
   width: calc(min(100vw - 96px, 800px));
 }
+
+.topleft-content {
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-right: 5px;
+}
+
 
 .vflex {
   display: flex;
@@ -140,6 +153,10 @@ h1 {
 
 .secondary {
   color: rgb(118, 118, 118);
+}
+
+.shrink {
+  flex-shrink: 1;
 }
 
 .activity-item {
@@ -201,8 +218,8 @@ h1 {
 
 .hflex {
   display: flex;
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 .align-center {
@@ -311,7 +328,6 @@ h1 {
   position: relative;
   width: 100%;
   height: 100%;
-
   display: flex;
   justify-content: center;
   align-items: center;
